[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piah"
dynamic = ["version"]
description = 'automatically parse PDF and texts to dataclasses just providing them'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "fabiobarkoski", email = "fabiobarkoskii@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pypdf",
  "structlog",
  "tiktoken",
  "litellm",
  "python-dotenv"
]

[project.urls]
Documentation = "https://github.com/unknown/piah#readme"
Issues = "https://github.com/unknown/piah/issues"
Source = "https://github.com/unknown/piah"

[tool.hatch.version]
path = "piah/__about__.py"

[tool.mypy]
ignore_missing_imports = true

